# trap_pad

./: .gitignore  CMakeLists.txt  Cargo.toml  README.md
src/: editor.cpp  editor.h  gui.cpp  gui.h  main.cpp  main.rs
src/editor/: cursor.rs  line.rs  mod.rs  win.rs
src/gui/: win.rs
